samples/_failures_safe/1761698900_f65e4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93e49616.c: In function ‘tokenize’:
./samples/SAFE/__tmp_93e49616.c:179:23: error: expected ‘;’ at end of input
  179 |                 tokens
      |                       ^
      |                       ;
./samples/SAFE/__tmp_93e49616.c:179:17: error: expected declaration or statement at end of input
  179 |                 tokens
      |                 ^~~~~~
./samples/SAFE/__tmp_93e49616.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93e49616.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93e49616.c:179:17: error: expected declaration or statement at end of input
